wx-core/include/generated/ffi_m.h

// CLASS: wxMenuItem
wxClassInfo *wxMenuItem_CLASSINFO();
wxBitmap *wxMenuItem_GetBitmap(const wxMenuItem * self);
wxBitmap *wxMenuItem_GetBitmap1(const wxMenuItem * self, bool checked);
wxBitmapBundle *wxMenuItem_GetBitmapBundle(const wxMenuItem * self);
wxBitmap *wxMenuItem_GetDisabledBitmap(const wxMenuItem * self);
wxString *wxMenuItem_GetHelp(const wxMenuItem * self);
int wxMenuItem_GetId(const wxMenuItem * self);
wxString *wxMenuItem_GetItemLabel(const wxMenuItem * self);
wxString *wxMenuItem_GetItemLabelText(const wxMenuItem * self);
wxItemKind wxMenuItem_GetKind(const wxMenuItem * self);
int wxMenuItem_GetMarginWidth(const wxMenuItem * self);
wxMenu * wxMenuItem_GetMenu(const wxMenuItem * self);
wxMenu * wxMenuItem_GetSubMenu(const wxMenuItem * self);
wxAcceleratorEntry * wxMenuItem_GetAccel(const wxMenuItem * self);
bool wxMenuItem_IsCheck(const wxMenuItem * self);
bool wxMenuItem_IsCheckable(const wxMenuItem * self);
bool wxMenuItem_IsChecked(const wxMenuItem * self);
bool wxMenuItem_IsEnabled(const wxMenuItem * self);
bool wxMenuItem_IsRadio(const wxMenuItem * self);
bool wxMenuItem_IsSeparator(const wxMenuItem * self);
bool wxMenuItem_IsSubMenu(const wxMenuItem * self);
void wxMenuItem_SetBackgroundColour(wxMenuItem * self, const wxColour * colour);
void wxMenuItem_SetBitmap(wxMenuItem * self, const wxBitmapBundle * bmp);
void wxMenuItem_SetBitmap1(wxMenuItem * self, const wxBitmapBundle * bmp, bool checked);
void wxMenuItem_SetBitmaps(wxMenuItem * self, const wxBitmapBundle * checked, const wxBitmapBundle * unchecked);
void wxMenuItem_SetDisabledBitmap(wxMenuItem * self, const wxBitmapBundle * disabled);
void wxMenuItem_SetFont(wxMenuItem * self, const wxFont * font);
void wxMenuItem_SetHelp(wxMenuItem * self, const wxString * help_string);
void wxMenuItem_SetItemLabel(wxMenuItem * self, const wxString * label);
void wxMenuItem_SetMarginWidth(wxMenuItem * self, int width);
void wxMenuItem_SetMenu(wxMenuItem * self, wxMenu * menu);
void wxMenuItem_SetSubMenu(wxMenuItem * self, wxMenu * menu);
void wxMenuItem_SetTextColour(wxMenuItem * self, const wxColour * colour);
void wxMenuItem_SetAccel(wxMenuItem * self, wxAcceleratorEntry * accel);
void wxMenuItem_AddExtraAccel(wxMenuItem * self, const wxAcceleratorEntry * accel);
void wxMenuItem_ClearExtraAccels(wxMenuItem * self);
wxMenuItem *wxMenuItem_new(wxMenu * parent_menu, int id, const wxString * text, const wxString * help_string, wxItemKind kind, wxMenu * sub_menu);
void wxMenuItem_Check(wxMenuItem * self, bool check);
void wxMenuItem_Enable(wxMenuItem * self, bool enable);
wxString *wxMenuItem_GetLabelText(const wxString * text);
// CLASS: wxMessageDialog
wxClassInfo *wxMessageDialog_CLASSINFO();
wxMessageDialog *wxMessageDialog_new(wxWindow * parent, const wxString * message, const wxString * caption, long style, const wxPoint * pos);
void wxMessageDialog_SetExtendedMessage(wxMessageDialog * self, const wxString * extended_message);
bool wxMessageDialog_SetHelpLabel(wxMessageDialog * self, const ButtonLabel * help);
void wxMessageDialog_SetMessage(wxMessageDialog * self, const wxString * message);
bool wxMessageDialog_SetOKCancelLabels(wxMessageDialog * self, const ButtonLabel * ok, const ButtonLabel * cancel);
bool wxMessageDialog_SetOKLabel(wxMessageDialog * self, const ButtonLabel * ok);
bool wxMessageDialog_SetYesNoCancelLabels(wxMessageDialog * self, const ButtonLabel * yes, const ButtonLabel * no, const ButtonLabel * cancel);
bool wxMessageDialog_SetYesNoLabels(wxMessageDialog * self, const ButtonLabel * yes, const ButtonLabel * no);
wxString *wxMessageDialog_GetCaption(const wxMessageDialog * self);
wxString *wxMessageDialog_GetMessage(const wxMessageDialog * self);
wxString *wxMessageDialog_GetExtendedMessage(const wxMessageDialog * self);
long wxMessageDialog_GetMessageDialogStyle(const wxMessageDialog * self);
bool wxMessageDialog_HasCustomLabels(const wxMessageDialog * self);
wxString *wxMessageDialog_GetYesLabel(const wxMessageDialog * self);
wxString *wxMessageDialog_GetNoLabel(const wxMessageDialog * self);
wxString *wxMessageDialog_GetOKLabel(const wxMessageDialog * self);
wxString *wxMessageDialog_GetCancelLabel(const wxMessageDialog * self);
wxString *wxMessageDialog_GetHelpLabel(const wxMessageDialog * self);
long wxMessageDialog_GetEffectiveIcon(const wxMessageDialog * self);
// CLASS: wxMessageOutputMessageBox
void wxMessageOutputMessageBox_delete(wxMessageOutputMessageBox *self);
wxMessageOutputMessageBox *wxMessageOutputMessageBox_new();
// CLASS: wxMiniFrame
wxClassInfo *wxMiniFrame_CLASSINFO();
wxMiniFrame *wxMiniFrame_new();
wxMiniFrame *wxMiniFrame_new1(wxWindow * parent, wxWindowID id, const wxString * title, const wxPoint * pos, const wxSize * size, long style, const wxString * name);
bool wxMiniFrame_Create(wxMiniFrame * self, wxWindow * parent, wxWindowID id, const wxString * title, const wxPoint * pos, const wxSize * size, long style, const wxString * name);
// CLASS: wxMirrorDC
wxClassInfo *wxMirrorDC_CLASSINFO();
wxMirrorDC *wxMirrorDC_new(wxDC * dc, bool mirror);
// CLASS: wxMouseCaptureChangedEvent
wxClassInfo *wxMouseCaptureChangedEvent_CLASSINFO();
wxMouseCaptureChangedEvent *wxMouseCaptureChangedEvent_new(wxWindowID window_id, wxWindow * gained_capture);
wxWindow * wxMouseCaptureChangedEvent_GetCapturedWindow(const wxMouseCaptureChangedEvent * self);
// CLASS: wxMouseCaptureLostEvent
wxClassInfo *wxMouseCaptureLostEvent_CLASSINFO();
wxMouseCaptureLostEvent *wxMouseCaptureLostEvent_new(wxWindowID window_id);
// CLASS: wxMouseEvent
wxClassInfo *wxMouseEvent_CLASSINFO();
bool wxMouseEvent_Aux1DClick(const wxMouseEvent * self);
bool wxMouseEvent_Aux1Down(const wxMouseEvent * self);
bool wxMouseEvent_Aux1Up(const wxMouseEvent * self);
bool wxMouseEvent_Aux2DClick(const wxMouseEvent * self);
bool wxMouseEvent_Aux2Down(const wxMouseEvent * self);
bool wxMouseEvent_Aux2Up(const wxMouseEvent * self);
bool wxMouseEvent_Dragging(const wxMouseEvent * self);
bool wxMouseEvent_Entering(const wxMouseEvent * self);
int wxMouseEvent_GetButton(const wxMouseEvent * self);
int wxMouseEvent_GetClickCount(const wxMouseEvent * self);
int wxMouseEvent_GetLinesPerAction(const wxMouseEvent * self);
int wxMouseEvent_GetColumnsPerAction(const wxMouseEvent * self);
wxPoint *wxMouseEvent_GetLogicalPosition(const wxMouseEvent * self, const wxDC * dc);
int wxMouseEvent_GetWheelDelta(const wxMouseEvent * self);
bool wxMouseEvent_IsWheelInverted(const wxMouseEvent * self);
int wxMouseEvent_GetWheelRotation(const wxMouseEvent * self);
bool wxMouseEvent_IsButton(const wxMouseEvent * self);
bool wxMouseEvent_IsPageScroll(const wxMouseEvent * self);
bool wxMouseEvent_Leaving(const wxMouseEvent * self);
bool wxMouseEvent_LeftDClick(const wxMouseEvent * self);
bool wxMouseEvent_LeftDown(const wxMouseEvent * self);
bool wxMouseEvent_LeftUp(const wxMouseEvent * self);
bool wxMouseEvent_Magnify(const wxMouseEvent * self);
bool wxMouseEvent_MetaDown(const wxMouseEvent * self);
bool wxMouseEvent_MiddleDClick(const wxMouseEvent * self);
bool wxMouseEvent_MiddleDown(const wxMouseEvent * self);
bool wxMouseEvent_MiddleUp(const wxMouseEvent * self);
bool wxMouseEvent_Moving(const wxMouseEvent * self);
bool wxMouseEvent_RightDClick(const wxMouseEvent * self);
bool wxMouseEvent_RightDown(const wxMouseEvent * self);
bool wxMouseEvent_RightUp(const wxMouseEvent * self);
// CLASS: wxMouseEventsManager
wxClassInfo *wxMouseEventsManager_CLASSINFO();
bool wxMouseEventsManager_Create(wxMouseEventsManager * self, wxWindow * win);
// CLASS: wxMoveEvent
wxClassInfo *wxMoveEvent_CLASSINFO();
wxMoveEvent *wxMoveEvent_new(const wxPoint * pt, int id);
wxPoint *wxMoveEvent_GetPosition(const wxMoveEvent * self);
wxRect *wxMoveEvent_GetRect(const wxMoveEvent * self);
void wxMoveEvent_SetRect(wxMoveEvent * self, const wxRect * rect);
void wxMoveEvent_SetPosition(wxMoveEvent * self, const wxPoint * pos);