wx-core/src/generated/ffi_m.rs


    // wxMenuItem
    pub fn wxMenuItem_CLASSINFO() -> *mut c_void;
    // BLOCKED: pub fn wxMenuItem_GetBackgroundColour(self_: *const c_void) -> *mut c_void;
    pub fn wxMenuItem_GetBitmap(self_: *const c_void) -> *mut c_void;
    pub fn wxMenuItem_GetBitmap1(self_: *const c_void, checked: bool) -> *mut c_void;
    pub fn wxMenuItem_GetBitmapBundle(self_: *const c_void) -> *mut c_void;
    pub fn wxMenuItem_GetDisabledBitmap(self_: *const c_void) -> *mut c_void;
    // BLOCKED: pub fn wxMenuItem_GetFont(self_: *const c_void) -> *mut c_void;
    pub fn wxMenuItem_GetHelp(self_: *const c_void) -> *mut c_void;
    pub fn wxMenuItem_GetId(self_: *const c_void) -> c_int;
    pub fn wxMenuItem_GetItemLabel(self_: *const c_void) -> *mut c_void;
    pub fn wxMenuItem_GetItemLabelText(self_: *const c_void) -> *mut c_void;
    pub fn wxMenuItem_GetKind(self_: *const c_void) -> c_int;
    // BLOCKED: pub fn wxMenuItem_GetLabel(self_: *const c_void) -> wxString;
    pub fn wxMenuItem_GetMarginWidth(self_: *const c_void) -> c_int;
    pub fn wxMenuItem_GetMenu(self_: *const c_void) -> *mut c_void;
    // BLOCKED: pub fn wxMenuItem_GetName(self_: *const c_void) -> wxString;
    pub fn wxMenuItem_GetSubMenu(self_: *const c_void) -> *mut c_void;
    // BLOCKED: pub fn wxMenuItem_GetText(self_: *const c_void) -> *const c_void;
    // BLOCKED: pub fn wxMenuItem_GetTextColour(self_: *const c_void) -> *mut c_void;
    pub fn wxMenuItem_GetAccel(self_: *const c_void) -> *mut c_void;
    // BLOCKED: pub fn wxMenuItem_GetAccelFromString(label: *const c_void) -> *mut c_void;
    pub fn wxMenuItem_IsCheck(self_: *const c_void) -> bool;
    pub fn wxMenuItem_IsCheckable(self_: *const c_void) -> bool;
    pub fn wxMenuItem_IsChecked(self_: *const c_void) -> bool;
    pub fn wxMenuItem_IsEnabled(self_: *const c_void) -> bool;
    pub fn wxMenuItem_IsRadio(self_: *const c_void) -> bool;
    pub fn wxMenuItem_IsSeparator(self_: *const c_void) -> bool;
    pub fn wxMenuItem_IsSubMenu(self_: *const c_void) -> bool;
    pub fn wxMenuItem_SetBackgroundColour(self_: *mut c_void, colour: *const c_void);
    pub fn wxMenuItem_SetBitmap(self_: *mut c_void, bmp: *const c_void);
    pub fn wxMenuItem_SetBitmap1(self_: *mut c_void, bmp: *const c_void, checked: bool);
    pub fn wxMenuItem_SetBitmaps(
        self_: *mut c_void,
        checked: *const c_void,
        unchecked: *const c_void,
    );
    pub fn wxMenuItem_SetDisabledBitmap(self_: *mut c_void, disabled: *const c_void);
    pub fn wxMenuItem_SetFont(self_: *mut c_void, font: *const c_void);
    pub fn wxMenuItem_SetHelp(self_: *mut c_void, help_string: *const c_void);
    pub fn wxMenuItem_SetItemLabel(self_: *mut c_void, label: *const c_void);
    pub fn wxMenuItem_SetMarginWidth(self_: *mut c_void, width: c_int);
    pub fn wxMenuItem_SetMenu(self_: *mut c_void, menu: *mut c_void);
    pub fn wxMenuItem_SetSubMenu(self_: *mut c_void, menu: *mut c_void);
    // BLOCKED: pub fn wxMenuItem_SetText(self_: *mut c_void, text: *const c_void);
    pub fn wxMenuItem_SetTextColour(self_: *mut c_void, colour: *const c_void);
    pub fn wxMenuItem_SetAccel(self_: *mut c_void, accel: *mut c_void);
    pub fn wxMenuItem_AddExtraAccel(self_: *mut c_void, accel: *const c_void);
    pub fn wxMenuItem_ClearExtraAccels(self_: *mut c_void);
    pub fn wxMenuItem_new(
        parent_menu: *mut c_void,
        id: c_int,
        text: *const c_void,
        help_string: *const c_void,
        kind: c_int,
        sub_menu: *mut c_void,
    ) -> *mut c_void;
    // DTOR: pub fn wxMenuItem_~wxMenuItem(self_: *mut c_void);
    pub fn wxMenuItem_Check(self_: *mut c_void, check: bool);
    pub fn wxMenuItem_Enable(self_: *mut c_void, enable: bool);
    // BLOCKED: pub fn wxMenuItem_GetLabelFromText(text: *const c_void) -> wxString;
    pub fn wxMenuItem_GetLabelText(text: *const c_void) -> *mut c_void;

    // wxMessageDialog
    pub fn wxMessageDialog_CLASSINFO() -> *mut c_void;
    pub fn wxMessageDialog_new(
        parent: *mut c_void,
        message: *const c_void,
        caption: *const c_void,
        style: c_long,
        pos: *const c_void,
    ) -> *mut c_void;
    pub fn wxMessageDialog_SetExtendedMessage(self_: *mut c_void, extended_message: *const c_void);
    pub fn wxMessageDialog_SetHelpLabel(self_: *mut c_void, help: *const c_void) -> bool;
    pub fn wxMessageDialog_SetMessage(self_: *mut c_void, message: *const c_void);
    pub fn wxMessageDialog_SetOKCancelLabels(
        self_: *mut c_void,
        ok: *const c_void,
        cancel: *const c_void,
    ) -> bool;
    pub fn wxMessageDialog_SetOKLabel(self_: *mut c_void, ok: *const c_void) -> bool;
    pub fn wxMessageDialog_SetYesNoCancelLabels(
        self_: *mut c_void,
        yes: *const c_void,
        no: *const c_void,
        cancel: *const c_void,
    ) -> bool;
    pub fn wxMessageDialog_SetYesNoLabels(
        self_: *mut c_void,
        yes: *const c_void,
        no: *const c_void,
    ) -> bool;
    pub fn wxMessageDialog_GetCaption(self_: *const c_void) -> *mut c_void;
    pub fn wxMessageDialog_GetMessage(self_: *const c_void) -> *mut c_void;
    pub fn wxMessageDialog_GetExtendedMessage(self_: *const c_void) -> *mut c_void;
    pub fn wxMessageDialog_GetMessageDialogStyle(self_: *const c_void) -> c_long;
    pub fn wxMessageDialog_HasCustomLabels(self_: *const c_void) -> bool;
    pub fn wxMessageDialog_GetYesLabel(self_: *const c_void) -> *mut c_void;
    pub fn wxMessageDialog_GetNoLabel(self_: *const c_void) -> *mut c_void;
    pub fn wxMessageDialog_GetOKLabel(self_: *const c_void) -> *mut c_void;
    pub fn wxMessageDialog_GetCancelLabel(self_: *const c_void) -> *mut c_void;
    pub fn wxMessageDialog_GetHelpLabel(self_: *const c_void) -> *mut c_void;
    pub fn wxMessageDialog_GetEffectiveIcon(self_: *const c_void) -> c_long;

    // wxMessageOutputMessageBox
    pub fn wxMessageOutputMessageBox_delete(self_: *mut c_void);
    pub fn wxMessageOutputMessageBox_new() -> *mut c_void;

    // wxMiniFrame
    pub fn wxMiniFrame_CLASSINFO() -> *mut c_void;
    pub fn wxMiniFrame_new() -> *mut c_void;
    pub fn wxMiniFrame_new1(
        parent: *mut c_void,
        id: c_int,
        title: *const c_void,
        pos: *const c_void,
        size: *const c_void,
        style: c_long,
        name: *const c_void,
    ) -> *mut c_void;
    // DTOR: pub fn wxMiniFrame_~wxMiniFrame(self_: *mut c_void);
    pub fn wxMiniFrame_Create(
        self_: *mut c_void,
        parent: *mut c_void,
        id: c_int,
        title: *const c_void,
        pos: *const c_void,
        size: *const c_void,
        style: c_long,
        name: *const c_void,
    ) -> bool;

    // wxMirrorDC
    pub fn wxMirrorDC_CLASSINFO() -> *mut c_void;
    pub fn wxMirrorDC_new(dc: *mut c_void, mirror: bool) -> *mut c_void;

    // wxMouseCaptureChangedEvent
    pub fn wxMouseCaptureChangedEvent_CLASSINFO() -> *mut c_void;
    pub fn wxMouseCaptureChangedEvent_new(
        window_id: c_int,
        gained_capture: *mut c_void,
    ) -> *mut c_void;
    pub fn wxMouseCaptureChangedEvent_GetCapturedWindow(self_: *const c_void) -> *mut c_void;

    // wxMouseCaptureLostEvent
    pub fn wxMouseCaptureLostEvent_CLASSINFO() -> *mut c_void;
    pub fn wxMouseCaptureLostEvent_new(window_id: c_int) -> *mut c_void;

    // wxMouseEvent
    pub fn wxMouseEvent_CLASSINFO() -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxMouseEvent_new(mouse_event_type: wxEventType) -> *mut c_void;
    pub fn wxMouseEvent_Aux1DClick(self_: *const c_void) -> bool;
    pub fn wxMouseEvent_Aux1Down(self_: *const c_void) -> bool;
    pub fn wxMouseEvent_Aux1Up(self_: *const c_void) -> bool;
    pub fn wxMouseEvent_Aux2DClick(self_: *const c_void) -> bool;
    pub fn wxMouseEvent_Aux2Down(self_: *const c_void) -> bool;
    pub fn wxMouseEvent_Aux2Up(self_: *const c_void) -> bool;
    // NOT_SUPPORTED: pub fn wxMouseEvent_Button(self_: *const c_void, but: wxMouseButton) -> bool;
    // NOT_SUPPORTED: pub fn wxMouseEvent_ButtonDClick(self_: *const c_void, but: wxMouseButton) -> bool;
    // NOT_SUPPORTED: pub fn wxMouseEvent_ButtonDown(self_: *const c_void, but: wxMouseButton) -> bool;
    // NOT_SUPPORTED: pub fn wxMouseEvent_ButtonUp(self_: *const c_void, but: wxMouseButton) -> bool;
    pub fn wxMouseEvent_Dragging(self_: *const c_void) -> bool;
    pub fn wxMouseEvent_Entering(self_: *const c_void) -> bool;
    pub fn wxMouseEvent_GetButton(self_: *const c_void) -> c_int;
    pub fn wxMouseEvent_GetClickCount(self_: *const c_void) -> c_int;
    pub fn wxMouseEvent_GetLinesPerAction(self_: *const c_void) -> c_int;
    pub fn wxMouseEvent_GetColumnsPerAction(self_: *const c_void) -> c_int;
    pub fn wxMouseEvent_GetLogicalPosition(self_: *const c_void, dc: *const c_void) -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxMouseEvent_GetMagnification(self_: *const c_void) -> float;
    pub fn wxMouseEvent_GetWheelDelta(self_: *const c_void) -> c_int;
    pub fn wxMouseEvent_IsWheelInverted(self_: *const c_void) -> bool;
    pub fn wxMouseEvent_GetWheelRotation(self_: *const c_void) -> c_int;
    // NOT_SUPPORTED: pub fn wxMouseEvent_GetWheelAxis(self_: *const c_void) -> wxMouseWheelAxis;
    pub fn wxMouseEvent_IsButton(self_: *const c_void) -> bool;
    pub fn wxMouseEvent_IsPageScroll(self_: *const c_void) -> bool;
    pub fn wxMouseEvent_Leaving(self_: *const c_void) -> bool;
    pub fn wxMouseEvent_LeftDClick(self_: *const c_void) -> bool;
    pub fn wxMouseEvent_LeftDown(self_: *const c_void) -> bool;
    pub fn wxMouseEvent_LeftUp(self_: *const c_void) -> bool;
    pub fn wxMouseEvent_Magnify(self_: *const c_void) -> bool;
    pub fn wxMouseEvent_MetaDown(self_: *const c_void) -> bool;
    pub fn wxMouseEvent_MiddleDClick(self_: *const c_void) -> bool;
    pub fn wxMouseEvent_MiddleDown(self_: *const c_void) -> bool;
    pub fn wxMouseEvent_MiddleUp(self_: *const c_void) -> bool;
    pub fn wxMouseEvent_Moving(self_: *const c_void) -> bool;
    pub fn wxMouseEvent_RightDClick(self_: *const c_void) -> bool;
    pub fn wxMouseEvent_RightDown(self_: *const c_void) -> bool;
    pub fn wxMouseEvent_RightUp(self_: *const c_void) -> bool;

    // wxMouseEventsManager
    pub fn wxMouseEventsManager_CLASSINFO() -> *mut c_void;
    // BLOCKED: pub fn wxMouseEventsManager_new() -> *mut c_void;
    // BLOCKED: pub fn wxMouseEventsManager_new1(win: *mut c_void) -> *mut c_void;
    pub fn wxMouseEventsManager_Create(self_: *mut c_void, win: *mut c_void) -> bool;

    // wxMoveEvent
    pub fn wxMoveEvent_CLASSINFO() -> *mut c_void;
    pub fn wxMoveEvent_new(pt: *const c_void, id: c_int) -> *mut c_void;
    pub fn wxMoveEvent_GetPosition(self_: *const c_void) -> *mut c_void;
    pub fn wxMoveEvent_GetRect(self_: *const c_void) -> *mut c_void;
    pub fn wxMoveEvent_SetRect(self_: *mut c_void, rect: *const c_void);
    pub fn wxMoveEvent_SetPosition(self_: *mut c_void, pos: *const c_void);

}
